updated route paths
