# routes/user.go
@@ -24,7 +24,7 @@ func UserRoutes(router *gin.RouterGroup) {
 // @Param        loginUser  body  model.LoginUser  true  "Login payload"
 // @Success      200  {object}  model.APIResponse{data=model.LoginUserResponse} "Success" "Example: {\"message\": \"User logged in successfully !\", \"data\": {\"token\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...\"}}"
 // @Failure      400  {object}  utils.ErrorResponse "Validation error" "Example: {\"message\": \"Request failed\", \"errors\": [{\"field\": \"email\", \"error\": \"invalid email\"}]}"
-// @Router       /login [post]
+// @Router       /user/login [post]
 func handleLogin(ctx *gin.Context) {
 	var loginUser model.LoginUser
 	payloadErr := ctx.ShouldBindJSON(&loginUser)
@@ -80,7 +80,7 @@ func handleLogin(ctx *gin.Context) {
 // @Param        userCreds  body  model.UserCredentials  true  "User credentials payload"
 // @Success      200  {object}  model.APIResponse "Success" "Example: {\"message\": \"User credentials are valid.\"}"
 // @Failure      400  {object}  utils.ErrorResponse "Validation error" "Example: {\"message\": \"Request failed\", \"errors\": [{\"field\": \"password\", \"error\": \"password too weak\"}]}"
-// @Router       /verify-credentials [post]
+// @Router       /user/verify-credentials [post]
 func handleVerifyCredentials(ctx *gin.Context) {
 	var userCreds model.UserCredentials
 	payloadErr := ctx.ShouldBindBodyWithJSON(&userCreds)
@@ -115,7 +115,7 @@ func handleVerifyCredentials(ctx *gin.Context) {
 // @Param        userToSignUp  body  model.SignUpUser  true  "Sign up payload"
 // @Success      201  {object}  model.APIResponse "Success" "Example: {\"message\": \"User signed up successfully !\"}"
 // @Failure      400  {object}  utils.ErrorResponse "Validation error" "Example: {\"message\": \"Request failed\", \"errors\": [{\"field\": \"otp_code\", \"error\": \"invalid OTP\"}]}"
-// @Router       /sign-up [post]
+// @Router       /user/sign-up [post]
 func handleSignUp(ctx *gin.Context) {
 	var userToSignUp model.SignUpUser
 	payloadErr := ctx.ShouldBindBodyWithJSON(&userToSignUp)
